desktop/core/src/desktop/js/apps/editor/components/AiAssist/AiAssistToolbar/AiAssistToolbarInput.scss
@use 'variables' as vars;
@use '../sharedAiAssistVars' as ai-assist-vars;

$line-height: 20px;
$semi-transparent-background: rgba(237, 247, 255, 0.5);

.cuix.antd {
  .hue-ai-assist-toolbar-input__wrapper {
    flex-grow: 0;
    width: 0px;
    // transition: flex-grow 0.5s ease;
  }

  .hue-ai-assist-toolbar-input__wrapper--expanded {
    flex-grow: 1;
    order: -1;
  }

  .hue-ai-assist-toolbar-input__text-input {
    all: unset;
    caret-color: vars.$fluidx-blue-400;
    color: vars.$fluidx-blue-400;
    font-size: 14px;
    overflow: hidden;
    margin-top: 30px;
    line-height: $line-height;
    white-space: pre-line;

    position: absolute;
    top: -20px;
    padding-left: 4px;
    padding-bottom: 4px;
    padding-right: 4px;
    height: inherit;

    &::placeholder {
      color: vars.$fluidx-blue-200;
    }
    &:focus {
      text-overflow: inherit;
    }
  }

  .hue-ai-assist-toolbar-input__text-input--empty {
    width: 100%;
    border-left: 2px solid transparent;
  }

  .hue-ai-assist-toolbar-input__text-input--multi-line,
  .hue-ai-assist-toolbar-input__text-input--is-prefill {
    z-index: 2; // Needed to make sure the input is on top of the editor
    backdrop-filter: blur(5px);
    background-color: $semi-transparent-background;
  }

  .hue-ai-assist-toolbar-input__text-input--multi-line {
    border-left: 2px solid;
    border-right: 2px solid;
  }

  // Used as a reference element for measuring the width of the input
  // which is needed to create a growing input field.
  .hue-ai-assist-toolbar-input__size-reference-element {
    // visibility: hidden;
    white-space: pre-wrap;
    overflow-wrap: break-all;
    border: 1px dotted red;
    color: red;
    line-height: $line-height;
    word-wrap: break-word;
    display: inline-block;
  }

  .hue-ai-assist-toolbar-input__single-line-reference-element {
    visibility: hidden;
    position: absolute;
    line-height: $line-height;
  }
}

